deploy/manifests/index/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site
  labels:
    app: personal-site
spec:
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      containers:
        - name: personal-site
          image: raphaelreyna/personal-site:v0.3.8
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 10m
              memory: 32Mi
