deploy/manifests/index/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: personal-site
