deploy/manifests/index/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  annotations:
    cert-manager.io/cluster-issuer: digitalocean-letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - secretName: rreyna-dev-tls
      hosts:
        - "rreyna.dev"
  rules:
  - host: "rreyna.dev"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: personal-site
              port:
                number: 80
